spacing fix for about section

--- a/css/general.css
+++ b/css/general.css
@@ -80,6 +80,7 @@ h1, h2, h3, h4 {
 	margin-right: auto;
 	padding-left: 0;
 	padding-right: 0;
+	margin-bottom: 1.5em;
 }
 
 /* VIDEO ON HOMEPAGE */
